--- a/02.html
+++ b/02.html
@@ -1,17 +1,29 @@
 <!-- #2 Array traversing and accessing in Data structure -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   
+  <head>
     <title>Document</title>
     <script>
-        let data=[1,3,2,4,6,5,9,7,8];
-        for(let i=0; i<data.length; i++){
-    document.write(`${i} = ${data[i]} <br>`);
+      let data = [1, 3, 2, 4, 6, 5, 9, 7, 8];
+
+      function arrayx() {
+        for (let i = 0; i < data.length; i++) {
+          document.write(`${i} = ${data[i]} <br>`);
         }
+      }
+
+      function getvalue() {
+        let element= document.getElementById('el').value;
+        alert(`value in index ${element} is  ${data[element]}`)
+      }
     </script>
-</head>
-<body>
-    
-</body>
+  
+
+  <body>
+    <button onclick="arrayx()">SEE ARRAY</button>
+    <br>
+    <br>
+    <input type="text" placeholder="Enter the index value" id="el"></input>
+    <button onclick="getvalue()">Get value</button>
+  </body>
 </html>
